--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,14 @@
-spring.application.name=spring-redis-example
+# application.yml
+spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: 1234
+      timeout: 2000 # ?? ????(ms)
+      lettuce:
+        pool:
+          max-active: 8   # ?? ??? ?
+          max-idle: 8     # ?? ?? ???
+          min-idle: 0     # ?? ?? ???
+          max-wait: 5000  # ??? ??? ??? ? ?? ??(ms)
